--- a/RCWS_Situation-room/RCWS_Situation-room/Properties/Resources.resx
+++ b/RCWS_Situation-room/RCWS_Situation-room/Properties/Resources.resx
@@ -145,4 +145,10 @@
   <data name="weapon_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>weapon_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dot_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>dot_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="motor_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>motor_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
